fixed navbar overlap, made banners same size, played around with fonts and margins slightly

--- a/webPage/afaa-webpage/src/css/AboutTheProject.css
+++ b/webPage/afaa-webpage/src/css/AboutTheProject.css
@@ -1,8 +1,12 @@
 .TitleBox2 {
-    height:150px; 
+    min-height: 10vh;
+    max-height: 15vh;
+    height: auto;
+    padding: 2em 1em; 
     display:flex;
     align-items: center;  
     justify-content: center;
+    flex-direction: column;
     margin-bottom: 0px;
     background-image: url('../assets/Retro.jpg');
     background-repeat: no-repeat;
@@ -11,7 +15,7 @@
 }
 
 .projectTitle {
-    font-size: clamp(2em, 11vw, 4.0em);
+    font-size: clamp(2em, 8vw, 3.5em);
     color:rgb(186, 29, 29);
     font-family: 'Inria Serif', serif;
     text-align: center;
@@ -29,7 +33,8 @@
 .AboutTheProjectBody {
     color: rgb(214, 214, 214);
     font-family: 'Kode Mono', monospace;
-    font-size: 1.2em;
+    font-size: clamp(.5em, 6vw, 1em);
+    /*font-size: 1.2em;*/
     text-align: left;
     margin: 30px;
     margin-top: 0px;
