--- a/webPage/afaa-webpage/src/css/NavBar.css
+++ b/webPage/afaa-webpage/src/css/NavBar.css
@@ -2,8 +2,7 @@
     display:flex;
     justify-content: space-between;
     background-color: rgb(27, 27, 59); 
-    height: 5.5vh;
-    
+    height: auto;
 }
 
 .navLink:hover{
