--- a/webPage/afaa-webpage/src/css/Progress.css
+++ b/webPage/afaa-webpage/src/css/Progress.css
@@ -1,34 +1,37 @@
 .pBodyBox{
-    text-align: left;
-    margin: 25px;
-    margin-top: 25px;
-    margin-bottom: 25px;
+    text-align: center;
+    margin: 20px;
 }
 
 .pBodyText{
     color: rgb(214, 214, 214);
     margin:10px;
-    font-size: 1.4em;
+    font-size: clamp(1em, 6vw, 1.1em);
     font-family: 'Kode Mono', monospace;
-    text-align: left;
+    text-align: center;
 }
 
 .progressBox
 {
-    height:150px;
+    min-height: 10vh;
+    max-height: 15vh;
+    height: auto;
+    padding: 2em 1em;
     display:flex;
     align-items: center;  
     justify-content: center;
-    margin:0;
+    flex-direction: column;
+    margin-bottom: 0px;
     background-image: url('../assets/Stock_Space.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    margin:0;
 }
 
 .progressTitle
 {
-    font-size: clamp(3em, 10vw, 4em);
+    font-size: clamp(2em, 8vw, 3.5em);
     color:rgb(186, 29, 29);
     font-family: 'Inria Serif', serif;
     text-align: center;
